RESOLVED FIXED93694
FileWriter fails with assertion when trying to write empty Blob
https://bugs.webkit.org/show_bug.cgi?id=93694
Summary FileWriter fails with assertion when trying to write empty Blob
Kinuko Yasuda
Reported 2012-08-10 00:25:28 PDT
FileWriter fails with assertion when trying to write empty Blob Renderer crashed with message: > ASSERTION FAILED: bytes + m_bytesWritten > 0 > third_party/WebKit/Source/WebCore/fileapi/FileWriter.cpp(182) : virtual void WebCore::FileWriter::didWrite(long long int, bool)
Attachments
Patch (6.71 KB, patch)
2012-08-10 00:53 PDT, Kinuko Yasuda
tkent: review+
tkent: commit-queue-
Kinuko Yasuda
Comment 1 2012-08-10 00:53:02 PDT
Kinuko Yasuda
Comment 2 2012-08-10 00:53:53 PDT
Made a quick fix. EricU: can you take the first look? Thanks!
Kinuko Yasuda
Comment 3 2012-08-14 19:39:59 PDT
Adding some more reviewers. Can someone take a look at this tiny change? Thanks!
Kent Tamura
Comment 4 2012-08-14 19:47:39 PDT
Comment on attachment 157660 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=157660&action=review > LayoutTests/fast/filesystem/file-writer-empty-blob.html:4 > +<html> > + <head> > + <title>File Writer with empty Blob</title> Inconsistent indentation > LayoutTests/fast/filesystem/resources/file-writer-empty-blob.js:28 > +setupAndRunTest(2*1024*1024, 'file-writer-empty-blob', runTest); Need spaces before and after '*' > LayoutTests/fast/filesystem/workers/file-writer-empty-blob.html:4 > +<html> > + <head> > + <title>File Writer with empty Blob in Worker</title> inconsistent indentation
Kinuko Yasuda
Comment 5 2012-08-14 20:16:24 PDT
Thanks kent-san! Will fix before submitting.
Kinuko Yasuda
Comment 6 2012-08-14 21:01:36 PDT
Note You need to log in before you can comment on or make changes to this bug.