FileWriter fails with assertion when trying to write empty Blob https://bugs.webkit.org/show_bug.cgi?id=93694

Reviewed by Kent Tamura.

if the given data size is zero (i.e. m_bytesToWrite is zero) the assertion 'bytes + m_bytesWritten > 0' should not be tested.

Source/WebCore:

Tests: fast/filesystem/file-writer-empty-blob.html
       fast/filesystem/workers/file-writer-empty-blob.html

* Modules/filesystem/FileWriter.cpp:
(WebCore::FileWriter::didWrite):

LayoutTests:

* fast/filesystem/file-writer-empty-blob-expected.txt: Added.
* fast/filesystem/file-writer-empty-blob.html: Added.
* fast/filesystem/resources/file-writer-empty-blob.js: Added.
* fast/filesystem/workers/file-writer-empty-blob-expected.txt: Added.
* fast/filesystem/workers/file-writer-empty-blob.html: Added.

Canonical link: https://commits.webkit.org/111904@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125643 268f45cc-cd09-0410-ab3c-d52691b4dbfc