third_party/WebKit/LayoutTests/fast/filesystem/resources/file-writer-empty-blob.js
@@ -1,0 +1,30 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+if (this.importScripts) {
+    importScripts('fs-worker-common.js');
+    importScripts('../../js/resources/js-test-pre.js');
+    importScripts('file-writer-utils.js');
+}
+
+description("Test that FileWriter works without crash when trying to write an empty blob.");
+
+var fileEntry;
+
+function onTestSuccess() {
+    testPassed("Successfully wrote blob.");
+    cleanUp();
+}
+
+function startWrite(writer) {
+    var blob = new Blob([""]);
+    writer.onerror = onError;
+    writer.onwriteend = onTestSuccess;
+    writer.write(blob);
+}
+
+function runTest(unusedFileEntry, fileWriter) {
+    startWrite(fileWriter);
+    gc();
+}
+var jsTestIsAsync = true;
+setupAndRunTest(2 * 1024 * 1024, 'file-writer-empty-blob', runTest);
+
